--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "marked": "^15.0.7",
         "next-themes": "^0.4.6",
         "octokit": "^4.1.2",
+        "prismjs": "^1.30.0",
         "react": "^19.0.0",
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
@@ -66,6 +67,7 @@
         "react-resizable-panels": "^2.1.7",
         "react-syntax-highlighter": "^15.6.6",
         "recharts": "^2.15.1",
+        "refractor": "^3.6.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "three": "^0.175.0",
@@ -90,6 +92,11 @@
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.38.0",
         "vite": "^6.3.5"
+    },
+    "overrides": {
+        "refractor": {
+            "prismjs": "^1.30.0"
+        }
     },
     "workspaces": {
         "packages": [
