--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/react-query": "^5.83.1",
+        "@types/jszip": "^3.4.0",
+        "@types/react-router-dom": "^5.3.3",
         "@types/react-syntax-highlighter": "^15.5.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -54,6 +56,7 @@
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
         "input-otp": "^1.4.2",
+        "jszip": "^3.10.1",
         "lucide-react": "^0.484.0",
         "marked": "^15.0.7",
         "next-themes": "^0.4.6",
@@ -65,6 +68,7 @@
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
+        "react-router-dom": "^7.9.1",
         "react-syntax-highlighter": "^15.6.6",
         "recharts": "^2.15.1",
         "refractor": "^3.6.0",
@@ -89,6 +93,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
         "tailwindcss": "^4.1.11",
+        "terser": "^5.44.0",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.38.0",
         "vite": "^6.3.5"
